tests/union_error_serialize.stderr
error: `union` types aren't supported
 --> $DIR/union_error_serialize.rs:4:1
  |
4 | union BadType {
  | ^^^^^
